Bug fix (#32)
* Corrigir empty out of bounds

* Corrigir limpagem do canvas

* Corrigir planta crescendo pra fora da tela

* Rollback linha de bounds

* Remover margin dos botoes

--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,7 @@ canvas {
   opacity: 0.6;
   position: relative;
   cursor: pointer;
+  margin: 0;
 }
 
 .element-btn::before {
